# yamte

./: README.md  flake.nix  floskell.json  yamte.c  yamte.cabal  yamte.cpp
.github/workflows/: beautify.yml
app/: Main.hs
app/Data/Tree/: Cursor.hs
app/Yamte/: AST.hs  Attributes.hs  Buffer.hs  Cursor.hs  Display.hs  Draw.hs  Editor.hs  File.hs  Main.hs  Mode.hs  Types.hs
app/Yamte/Language/: Text.hs
app/Yamte/Mode/: Action.hs  File.hs  GenericAction.hs  Input.hs
src/: Buffer.cpp  Buffer.h  Cursor.cpp  Cursor.h  Display.cpp  Display.h  Editor.cpp  Editor.h  Row.cpp  Row.h  yamte.cpp
