cabal-version: 1.22
name: yamte
version: 0.1.0.0
homepage: https://github.com/danth/yamte
author: Daniel Thwaites
maintainer: danthwaites30@btinternet.com
license: AGPL-3
license-file: LICENSE
extra-doc-files: README.md
build-type: Simple

executable yamte
  build-depends: base, containers, text, ilist, ncurses, skylighting
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -O
