cabal-version: 2.0
name: yamte
version: 0.1.0.0
homepage: https://github.com/danth/yamte
author: Daniel Thwaites
maintainer: danthwaites30@btinternet.com
license: AGPL-3
license-file: LICENSE
extra-doc-files: README.md
build-type: Simple

executable yamte
  build-depends: base ^>= 4.15,
                 containers,
                 text,
                 ilist ^>= 0.4.0.0,
                 ncurses ^>= 0.2.16,
                 skylighting ^>= 0.11
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -O
