cabal-version: 2.0
name: yamte
version: 0.1.0.0
homepage: https://github.com/danth/yamte
author: Daniel Thwaites
maintainer: danthwaites30@btinternet.com
license: AGPL-3
license-file: LICENSE
extra-doc-files: README.md
build-type: Simple

executable yamte
  build-depends: base ^>= 4.15,
                 containers,
                 text,
                 brick ^>= 0.62,
                 data-default-class ^>= 0.1.2.0,
                 ilist ^>= 0.4.0.0,
                 microlens ^>= 0.4.12.0,
                 microlens-th ^>= 0.4.3.10,
                 skylighting ^>= 0.11,
                 vty ^>= 5.33
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -O -threaded -Wall
